--- a/roles/certificates/defaults/main.yml
+++ b/roles/certificates/defaults/main.yml
@@ -14,8 +14,10 @@ location: "{{ inventory_hostname }}" # Openssl's "CN" ("Common Name"). Can't be 
 dns:
   - "{{ inventory_hostname }}"
   - "{{ inventory_hostname }}.node.consul"
+  - "{{ inventory_hostname }}.ec2.internal"
   - "{{ ansible_hostname }}"
   - "{{ ansible_hostname }}.node.consul"
+  - "{{ ansible_hostname }}.ec2.internal"
   - "*.service.consul"
   - "kubernetes.default.svc.{{ cluster_name }}"
 # What IP addresses will this certificate be valid for?
