--- a/roles/kubernetes-master/templates/kube-apiserver.yml
+++ b/roles/kubernetes-master/templates/kube-apiserver.yml
@@ -36,6 +36,7 @@ spec:
     - --apiserver-count={{ groups['role=control'] | length }}
     - --etcd-servers=http://127.0.0.1:8500
     - --runtime-config=extensions/v1beta1/daemonsets=true
+    - --admission_control=NamespaceLifecycle,NamespaceExists,LimitRanger,SecurityContextDeny,ServiceAccount,ResourceQuota
     {% if enable_cloud_provider | bool -%}
     - --cloud-provider={{ cloud_provider }}
     {% endif -%}
