Upgrading to calico 1.1.0 Change calicoctl to new YAML method

--- a/roles/calico/tasks/calico-configure.yml
+++ b/roles/calico/tasks/calico-configure.yml
@@ -1,7 +1,12 @@
 ---
+- name: copy calico ip-ip pool config
+  template:
+    src: pool-conf.j2
+    dest: /tmp/pool-conf.yml
+
 - name: add calico ip-ip pool if required
   sudo: yes
-  shell: calicoctl pool add "{{ calico_network }}" --ipip --nat-outgoing
+  shell: calicoctl apply -f /tmp/pool-conf.yml
   environment:
     ETCD_AUTHORITY: "{{ calico_etcdaddr }}"
   run_once: True
@@ -9,24 +14,16 @@
   tags:
     - calico
 
-- name: check if calico profile already exists
-  sudo: yes
-  shell: calicoctl profile show|grep -w "{{ calico_profile }}"
-  environment:
-    ETCD_AUTHORITY: "{{ calico_etcdaddr }}"
-  register: check_result
-  changed_when: False
-  failed_when: check_result.stderr
-  run_once: True
-  tags:
-    - calico
+- name: copy calico profile config
+  template:
+    src: pool-conf.j2
+    dest: /tmp/profile-conf.yml
 
 - name: create calico profile
   sudo: yes
-  shell: calicoctl profile add "{{ calico_profile }}"
+  shell: calicoctl apply -f /tmp/profile-conf.yml
   environment:
     ETCD_AUTHORITY: "{{ calico_etcdaddr }}"
-  when: check_result.stdout == ""
   run_once: True
   tags:
     - calico
